--- a/button.css
+++ b/button.css
@@ -15,7 +15,7 @@ body {
 
 #myButton {
     color: black;
-    background-color: lightgray;
+    background-color: green;
     font-weight: bold;
 }
 
